class.c: propagate to subclasses

* class.c (rb_include_module, rb_prepend_module): propagate the
  included module to subclasses.  [ruby-core:61117] [Bug #9573]